<resources>
    <string name="app_name">Clusty Control</string>
    <string name="user_interface">User Interface</string>
    <string name="general_ui">General UI</string>
    <string name="lockscreen_options">Lockscreen options</string>
    <string name="power_menu_optons">Power menu options</string>
    <string name="functionality">Functionality</string>
    <string name="power_saver">Power saver</string>
    <string name="led_options">LED options</string>
    <string name="statusbar">Statusbar</string>
    <string name="general">General</string>
    <string name="toggles_layout">Toggles</string>
    <string name="clock">Clock</string>
    <string name="battery">Battery</string>
    <string name="nav_bar">Navigation bar</string>
    <string name="tools">Tools</string>
    <string name="weather">Weather</string>
    <string name="signal">Signal</string>
    <string name="header_summary_battery">Battery bar, 1% battery mod, etc</string>
    <string name="header_summary_general_ui">Boot animation, bug mailer, rotation, IME switcher, etc</string>
    <string name="header_summary_navigation_bar">Buttons to display, nav bar color, order</string>
    <string name="header_summary_lockscreens">Custom apps to launch, layout</string>
    <string name="header_summary_power_menu">What to display in your power menu</string>
    <string name="header_summary_powersaver">Automatically disable data to save battery</string>
    <string name="header_summary_led">Change default settings for Android to use</string>
    <string name="header_summary_general">Settings button behavior</string>
    <string name="header_summary_toggles">Customize toggles</string>
	<string name="header_summary_clock">Clock location, AM/PM style, color</string>
	<string name="header_summary_weather">Enable/disable, set custom location or network, and interval</string>
	<string name="header_summary_signal">Signal dBm text</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="title_pref_menu_display">Menu location</string>
    <string name="summary_pref_menu_display">Remember to remove your menu buttons if you\'re using the big menu button!</string>
    <string name="navigation_bar">Navigation bar</string>
    <string name="navigation_bar_tint_title">Navigation bar color</string>
    <string name="title_pref_navigation_menu_display">Menu visibility</string>
    <string name="summary_pref_navigation_menu_display">How and when do you want the menu buttons to appear?</string>
    <string name="navbar_order_title">Navigation button order</string>
    <string name="navbar_order_summary">Customize the order of your soft keys</string>
    <string name="enabled_navbar_buttons_title">Enabled buttons</string>
    <string name="enabled_navbar_buttons_summary">Choose which soft keys you would like to see</string>
    <string name="button_transparency_title">Nav button transparency</string>
    <string name="long_press_home_title">Long press home action</string>
    <string name="long_press_home_summary">What to do when long pressing the home softkey. Reboot required to reflect changes.</string>
    <string name="glow_times_title">Button glow animation</string>
    <string name="glow_times_summary">Adjust how fast your buttons animate after you touch them. Lowering the speed can improve performance.</string>
    <string name="rotation_animation_delay_title">Rotation delay</string>
    <string name="rotation_animation_delay_summary">The number of milliseconds for which the device posture must be stable before an orientation change occurs. 200 ms default.</string>
	<string name="ime_switcher_title">Show IME Switcher</string>
	<string name="ime_switcher_summary">In statusbar, while typing (requires reboot)</string>
	<string name="custom_carrier_label_title">Custom carrier label</string>
	<string name="longpress_to_kill_title">Hold back to kill</string>
	<string name="longpress_to_kill_summary">Holding back will kill the current activity</string>
	<string name="enable_volume_options">Enable Volume Options</string>
	<string name="rotate_180_title">Allow 180° rotation</string>
	<string name="rotate_180_summary">Allow your device to rotate upside down!</string>
	<string name="horizontal_recents_task_panel_title">Horizontal recents window</string>
	<string name="horizontal_recents_task_panel_summary">Use WebOS style task switcher. Your UI will restart after changing this. It will come back in about 10 seconds. If it doesn\'t, just reboot the phone from the power menu.</string>
	<string name="disable_bootanimation_title">Disable boot animation</string>
	<string name="disable_bootanimation_summary">Jerk.</string>
	<string name="disable_bugmailer_title">Disable bugmailer</string>
	<string name="lcd_density_title">LCD Density</string>
	<string name="lcd_density_summary">unknown</string>
	<string name="crt_animations_header">CRT animations</string>
	<string name="crt_on_title">CRT on animation</string>
	<string name="crt_off_title">CRT off animation</string>
	<string name="lcd_density_wizard">LCD Density Wizard</string>
	<string name="follow_through_title">Follow through!</string>
	<string name="follow_through_summary">Make sure you follow the steps one-by-one and complete each one before proceeding to the next.</string>
	<string name="stock_density_title">1. Change LCD Density to stock value</string>
	<string name="stock_density_summary">Tablets and older phones use 160. Most phones use 240. Galaxy Nexus uses 320 by default.</string>
	<string name="reboot_title">2. Reboot!</string>
	<string name="reboot_summary">Come back here after the reboot and complete the rest of the steps!</string>
	<string name="clear_market_data_title">3. Clear market data</string>
	<string name="clear_market_data_cleared">Market data cleared</string>
	<string name="open_market_title">4. Open Market and hit accept</string>
	<string name="open_market_summary">Press back when done to return here.</string>
	<string name="custom_density_title">5. Change density to whatever you like!</string>
	<string name="custom_density_summary">If you ever have compatibility issues with the market, be sure to return here and repeat the process.</string>
    <string name="pref_lockscreen_layout_title">Lockscreen style</string>
    <string name="pref_lockscreen_layout_summary">Remember to scroll down and change your targets after changing styles</string>
    <string name="title_pref_lockscreen_quad_targets">Quad Targets</string>
    <string name="summary_pref_lockscreen_quad_targets">Adds Phone and Messaging shortcuts on the lock screen</string>
    <string name="title_pref_lockscreen_octo_targets">Octo Targets</string>
    <string name="summary_pref_lockscreen_octo_targets">Adds too many shortcuts on the lock screen</string>
    <string name="title_pref_lockscreen_menu_unlock">Menu unlock</string>
    <string name="summary_pref_lockscreen_menu_unlock">Legacy menu icon unlocks screen (requires reboot)</string>
    <string name="title_lockscreen_user_timeout_override">Wait to lock screen</string>
    <string name="summary_lockscreen_user_timeout_override">Use Android\'s timeout setting after you manually turn the screen off. The default behavior is to use the delay only when the screen times out by itself.</string>
    <string name="lockscreen_battery_title">Lockscreen Battery Percentage</string>
    <string name="lockscreen_battery_summary">Always show battery percentage on the lockscreen</string>
	<string name="lockscreen_low_battery_title">Low Battery Percentage</string>
	<string name="lockscreen_low_battery_summary">Show low battery percentage on the lockscreen</string>
	<string name="lockscreen_weather_title">Lockscreen Weather</string>
    <string name="lockscreen_weather_summary">Show Weather Information on Lockscreen. You need to enable ROMControl\'s Weather service to use this</string>
	<string name="volume_wake_title">Volume wake</string>
    <string name="volume_wake_summary">Tapping the volume keys while your phone is off will turn the screen on.</string>
	<string name="volume_music_controls_title">Volume music controls</string>
    <string name="volume_music_controls_summary">Long press volume buttons to skip tracks while screen is off. Volume wake will not work when music is playing.</string>
	<string name="lockscreen_show_nav_title">Hide nav bar</string>
    <string name="lockscreen_show_nav_summary">Hide the nav bar (if your device supports it) on the lockscreen.</string>
	<string name="show_lock_before_unlock_title">Show lockscreen before unlock</string>
    <string name="show_lock_before_unlock_summary">Show standard lockscreen before secure unlock</string>
    <string name="custom_app_n_dialog_title">Choose action for target %1$s</string>
    <string name="custom_app_n">Custom app %1$s</string>
    <string name="lockscreen_targets">Lockscreen targets</string>
    <string name="lockscreen_action_unlock">Unlock</string>
    <string name="lockscreen_action_sound">Sound toggle</string>
    <string name="lockscreen_action_camera">Camera</string>
    <string name="lockscreen_action_mms">SMS</string>
    <string name="lockscreen_action_phone">Phone</string>
    <string name="lockscreen_action_none">Empty</string>
    <string name="lockscreen_landscape_title">Horizontal lockscreen</string>
    <string name="lockscreen_landscape_summary">Whether horizontal lockscreen orientation will be enabled</string>
    <string name="lockscreen_quick_unlock_control_title">Quick pin unlock</string>
    <string name="lockscreen_quick_unlock_control_summary">Unlock password/pin lockscreen without pressing enter button</string>
    <string name="enable_fast_torch_title">Enable fast torch</string>
    <string name="enable_fast_torch_summary">While your screen is off, you can long-press the power key to turn the LED light on. Letting go of the power button will turn the torch off.</string>
    <string name="lockscreen_wallpaper_title">Choose lockscreen wallpaper</string>
    <string name="lockscreen_wallpaper_summary">You can remove the wallpaper from the menu in this window</string>
    <string name="lockscreen_text_color_title">Lockscreen text color</string>
	<string name="lockscreen_calendar">Lockscreen calendar</string>
    <string name="lockscreen_calendar_title">Enable</string>
    <string name="lockscreen_calendar_summary">Show upcoming event(s) from your calendar on the lockscreen.</string>
    <string name="lockscreen_calendar_sources_title">Calendar sources</string>
    <string name="lockscreen_calendar_sources_summary">Select the calendars you want to see.</string>
	<string name="lockscreen_calendar_range_title">Time-range</string>
    <string name="lockscreen_calendar_range_summary">Select the time-range to be displayed.</string>
    <string name="lockscreen_calendar_use_colors_title">Use colors</string>
    <string name="lockscreen_calendar_use_colors_summary">If enabled, events will be colored like in your calendar.</string>
    <string name="lockscreen_calendar_hide_ongoing_title">Hide ongoing events</string>
    <string name="lockscreen_calendar_hide_ongoing_summary">If enabled, events which already started won\'t show up.</string>
    <string name="lockscreen_calendar_flip_title">Multiple events</string>
	<string name="donate_roman">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=MZD7JLRX6P99Y</string>
	<string name="devs">Developers</string>
	<string name="aokp">Android Open Kang Project</string>
	<string name="aokp_website_title">AOKP Website</string>
	<string name="aokp_website_summary">www.aokp.co - Find all newest releases here.</string>
	<string name="aokp_source_title">AOKP Source</string>
	<string name="aokp_source_summary">AOKP is fully open source. You can always check out the latest source at github.com/aokp</string>
	<string name="aokp_irc_title">Join us on IRC</string>
	<string name="aokp_irc_summary">#teamkang @ irc.freenode.net</string>
</resources>