<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:clustyrom="http://schemas.android.com/apk/res/com.clustycontrol">

	<PreferenceCategory
		android:key="clustyrom"
		android:title="@string/aokp">

		<Preference
			android:key="clustyrom_website"
			android:title="@string/aokp_website_title"
			android:summary="@string/aokp_website_summary" />

		<Preference
			android:key="clustyrom_source"
			android:title="@string/aokp_source_title"
			android:summary="@string/aokp_source_summary" />

		<Preference
			android:key="clustyrom_irc"
			android:title="@string/aokp_irc_title"
			android:summary="@string/aokp_irc_summary" />

	</PreferenceCategory>

	<PreferenceCategory
		android:key="devs"
		android:title="@string/devs">
		<com.clustycontrol.widgets.DeveloperPreference
			android:title="Clust3r"
			clustyrom:twitterHandle="clust3r"
			clustyrom:donateLink="@string/donate_roman" />

	</PreferenceCategory>

</PreferenceScreen>
